# QCVImageViewer

./: .gitignore  CMakeLists.txt  CMakeLists.txt_modif  ffmpegtest.cpp  ffmpegtest.h  filterbase.cpp  filterbase.h  filterbc.cpp  filterbc.h  filterfr.cpp  filterfr.h  filterinfo.cpp  filterinfo.h  imagecontrols.cpp  imagecontrols.h  imagecontrols.ui  imagecontrols2.cpp  imagecontrols2.h  imagecontrols2.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow2.cpp  mainwindow2.h  mainwindow2.ui  superbuild.xml  viewport.cpp  viewport.h  viewportbase.cpp  viewportbase.h  viewportcontroller.cpp  viewportcontroller.h  viewportopengl.cpp  viewportopengl.h  viewportsourcebase.cpp  viewportsourcebase.h  viewportsourcecamera.cpp  viewportsourcecamera.h  viewportsourcefile.cpp  (+5 more)
